[package]
name = "stip"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/reduf/stip.git"
repository = "https://github.com/reduf/stip.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
image = "0.24.5"
promptly = "0.3"
rpassword = "7.2.0"
rqrr = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1_smol = "1.0.0"
url = "2.3.1"
urlencoding = "2.1.2"
zip = "0.6.4"
