[package]
name = "stip"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/reduf/stip.git"
repository = "https://github.com/reduf/stip.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true

[build-dependencies]
cc = "1"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["svg"] }
rfd = "0.11.3"
rpassword = "7.2.0"
rqrr = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1_smol = "1.0.0"
url = "2.3.1"
urlencoding = "2.1.2"
zip = { git = "https://github.com/reduf/zip", branch = "feature/add-encrypted-get-function" }
